add reference to source repository

--- a/2018-01-17/simple-web-services-with-ace/index.html
+++ b/2018-01-17/simple-web-services-with-ace/index.html
@@ -29,6 +29,7 @@
     </p>
     <p>
       This post shows the process of creating a simple greetings application with Ace.
+      Or, jump <a href="https://github.com/CrowdHailer/greetings-ace-elixir-example">straight to the code</a>.
     </p>
     <p>
       <em>
@@ -259,6 +260,9 @@
       </li>
       <li>
         For components that work on top of Ace see the <a href="https://github.com/crowdhailer/raxx">Raxx project</a> and associated middlewares.
+      </li>
+      <li>
+        See the complete greetings application on <a href="https://github.com/CrowdHailer/greetings-ace-elixir-example">github</a>
       </li>
     </ul>
   </main>
