--- a/2018-02-18/git-status-for-elixir-builds/index.html
+++ b/2018-02-18/git-status-for-elixir-builds/index.html
@@ -56,15 +56,15 @@
 
       def commit(), do: @commit
     </code></pre>
-    <a href="">
+    <a href="https://hex.pm/packages/git_status">
       <h2>GitStatus</h2>
     </a>
     <p>
-      The solution is wrapped up in a compact hex package <a href="">git_status</a>.
+      The solution is wrapped up in a compact hex package <a href="https://hex.pm/packages/git_status">git_status</a>.
     </p>
     <h2>Clean code only, please</h2>
     <p>
-      The project also defines <a href=""><code class="language-elixir">is_clean?</code></a> to check if the git project had any uncommited content at compilation.
+      The project also defines <a href="https://hexdocs.pm/git_status/GitStatus.html#is_clean?/0"><code class="language-elixir">is_clean?</code></a> to check if the git project had any uncommited content at compilation.
       This can be used to great a guard test for CI ensuring that a build is always associated with the code in a commit.
     </p>
     <pre><code class="language-elixir">
@@ -102,7 +102,7 @@
     </code></pre>
   </main>
   <footer>
-    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-01-17/simple-web-services-with-ace/index.html" class="edit-page-link">Improve this page</a>
+    <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-02-18/git-status-for-elixir-builds/index.html" class="edit-page-link">Improve this page</a>
   </footer>
   <script src="/assets/prism.js"></script>
 </body>
