--- a/2018-02-18/git-status-for-elixir-builds/index.html
+++ b/2018-02-18/git-status-for-elixir-builds/index.html
@@ -56,7 +56,7 @@
 
       def commit(), do: @commit
     </code></pre>
-    <a href="https://hex.pm/packages/git_status">
+    <a href="https://github.com/crowdhailer/git_status">
       <h2>GitStatus</h2>
     </a>
     <p>
