--- a/2018-02-23/http-is-message-passing/index.html
+++ b/2018-02-23/http-is-message-passing/index.html
@@ -74,8 +74,7 @@
         end
       end
     </code></pre>
-    There are a few differences between the implementations that reflect the differences between sending messages over the web and withing the beam vm.
-
+    There are a few differences between the implementations that reflect the differences between sending messages over the web and within the beam vm.
     <ul>
       <li>
         A <code>Raxx.Server</code> is started for each request;
