publish why raxx article

--- a/2018-02-23/http-is-message-passing/index.html
+++ b/2018-02-23/http-is-message-passing/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>HTTP is message passing</title>
   <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
-  <link href="assets/prism.css" rel="stylesheet" />
+  <link href="/assets/prism.css" rel="stylesheet" />
 </head>
 <body>
   <header>
