--- a/2018-03-02/raxx-refined-web-development/index.html
+++ b/2018-03-02/raxx-refined-web-development/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Raxx refined web development</title>
+    <title>Raxx - refined web development</title>
     <link rel="stylesheet" href="/assets/site.css" media="screen" title="no title" charset="utf-8">
 
-    <meta name="description" content="What is Raxx and why it was built">
+    <meta name="description" content="Introducing the Raxx web framework for Elixir">
     <meta name="author" content="Peter Saxton">
 
   </head>
@@ -16,12 +16,16 @@
       </nav>
     </header>
     <main class="article">
-      <h1>Raxx refined web development</h1>
+      <h1>Raxx - refined web development</h1>
+      <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">
+        <img src="/images/elixirdaze2018.jpg" alt="Me talking at Elixir Daze 2018" style="max-width:100%;">
+      </a>
       <p>
         Raxx can be used to build web applications much like Plug.
         However that is where the similarities end.
         Raxx aims to simplify web applications by promoting simple concepts like functional purity and message passing.
-
+      </p>
+      <p>
         I started the project in 2016. Since then, it has matured to the point where it has been used in several production services.
         This talk will cover an introduction to the project; an overview of the rationale behind it, and finally a vision of what comes next.
       </p>
@@ -30,6 +34,7 @@
       </p>
       <p>
         <a href="slides.html">Slides</a>
+        <a href="http://confreaks.tv/videos/elixirdaze2018-purify-your-web-development-with-raxx">Video</a>
       </p>
     </main>
     <footer>
