--- a/index.html
+++ b/index.html
@@ -155,6 +155,21 @@
     <hr>
   </section>
   <section>
+    <h2>Tagline</h2>
+    <p>
+      Creator of Raxx; Elixir addict and open source evangelist.
+    </p>
+    <h2>Short Bio</h2>
+    <p>
+      Working with Elixir everyday at paywithcurl.com, and loving it.
+      Discovered Elixir after using Python, JavaScript, Ruby and Scala.
+      Before programming was conducting research into quantum optics.
+    </p>
+    <p>
+      Believes that message passing is a great way to think about distributed systems.
+      Nowadays developing Raxx with the goal of extending message passing beyond the BEAM.
+    </p>
+    <hr>
     <p>
       I have an Master of Physics (MPhys) from Oxford and started a Phd in Scotland following some travelling.
       I found the Phd was not well suited to me and I left to find faster feedback in the real world.
