more link fixes

--- a/2018-05-01/a-distributed-chatroom-with-raxx-kit/index.html
+++ b/2018-05-01/a-distributed-chatroom-with-raxx-kit/index.html
@@ -31,7 +31,7 @@
       In conjuction with other excellent tools in the Elixir (and erlang) ecosystem Raxx is still a powerful choice.
       I will demonstrate this by showing how easy it is to build a multi-node chat application.
     </p>
-    <em>This tutorial was made with <a href="">raxx_kit 0.5.1</a></em>
+    <em>This tutorial was made with <a href="https://hex.pm/packages/raxx_kit/0.5.1">raxx_kit 0.5.1</a></em>
     <h2>Starting a project</h2>
     <pre><code class="language-sh">
       $ mix archive.install hex raxx_kit
@@ -51,8 +51,6 @@
       Visit the home page at <a href="http://localhost:8080">http://localhost:8080</a> and the following should be visible.
     </p>
     <p><img src="raxx_kit_welcome.png" alt="raxx_kit auto generated home page"></p>
-    <!-- <em><a href="">commit - 1</a></em>
-    <hr> -->
     <h2>Updating the home page</h2>
     <p>
       The <code class="language-elixir">Watercooler.WWW.HomePage</code> module renders the homepage.
@@ -328,11 +326,11 @@
         -S mix
     </code></pre>
     <p>
-      Opening browser windows to <a href="">localhost:8081</a> and <a href="">localhost:8082</a> and publish a message will appear in both windows.
+      Opening browser windows to <a href="localhost:8081">localhost:8081</a> and <a href="localhost:8082">localhost:8082</a> and publish a message will appear in both windows.
     </p>
     <h2>Next</h2>
     <p>
-      Interested in using Raxx the best place to get started is the <a href="">README</a>.
+      Interested in using Raxx the best place to get started is the <a href="https://github.com/crowdhailer/raxx">README</a>.
       Any questions, ask on the <a href="https://elixirforum.com/">Elixir Forum</a> or chat in the <a href="https://elixir-lang.slack.com/messages/C56H3TBH8/">#raxx slack channel</a>.
     </p>
   </main>
