--- a/2018-05-01/a-distributed-chatroom-with-raxx-kit/index.html
+++ b/2018-05-01/a-distributed-chatroom-with-raxx-kit/index.html
@@ -19,7 +19,7 @@
     <h1>A distributed chatroom with Raxx.Kit</h1>
     <p>
       <a href="https://github.com/crowdhailer/raxx_kit">Raxx.Kit</a> is a project generator to start developing web applications with Raxx and Elixir.
-      <a href="https://github.com/crowdhailer/raxx">Raxx</a> is a toolkit focused on building the web layer for all kinds of Elixir application.
+      <a href="https://github.com/crowdhailer/raxx">Raxx</a> is a toolkit focused on building the web layer for all kinds of Elixir applications.
     </p>
     <h3>Why not Phoenix?</h3>
     <p>
@@ -120,7 +120,7 @@
     <p>
       There is no chatroom module bundled as part of Raxx because it has nothing to do with the web.
       However there are tools that come with Elixir that do the job very well.
-      The chatroom for this project we will build using pg2.
+      We will build the core functionality for this application using the pg2 library.
     </p>
     <p>
       <em>
@@ -128,7 +128,7 @@
       </em>
     </p>
     <p>
-      Fortunetly we do not need to know much about pg2 to be able to create a chatroom.
+      Fortunately, we do not need to know much about pg2 to be able to create a chatroom.
     </p>
     <pre><code class="language-elixir">
       # lib/watercooler.ex
@@ -157,7 +157,7 @@
     </p>
     <h2>Publishing a message</h2>
     <p>
-      Now there is a chatroom users need to be able to access it over the web.
+      Now there is a chatroom, users need to be able to access it over the web.
     </p>
     <pre><code class="language-elixir">
       # lib/watercooler/www/publish.ex
@@ -178,12 +178,12 @@
       end
     </code></pre>
     <p>
-      In response to a request the following action is taken.
+      In response to a request the following action is taken:
     </p>
     <ol>
       <li>Decode the body of the request and extract the message to be sent.</li>
       <li>Publish the message using the interface to the business logic defined before.</li>
-      <li>Reponse by redirecting the client back to the home page.</li>
+      <li>Response by redirecting the client back to the home page.</li>
     </ol>
     <p>
       All that remains is for this action to be added to the router.
@@ -207,7 +207,7 @@
     <h2>Sending messages</h2>
     <p>
       We will use server sent events to notify clients when someone publishes a message to the chatroom.
-      These are a standard that allow notification to be sent to a client from the server.
+      These are a standard that allow notifications to be sent to a client from the server.
       We use this standard as it is supported by most browsers and has a nice JavaScript API.
     </p>
     <pre><code class="language-elixir">
@@ -251,7 +251,7 @@
       <li>Join the chat room, this process will now receive messages for every publish event.</li>
       <li>Create a response with a body of unknown length</li>
       <li>Return the request so far and updated server state (in this example unchanged).</li>
-      <li>For every message from the chat room serialize it and send to the client. Again we return the same sever state</li>
+      <li>For every message from the chat room serialize it and send to the client. Again we return the same server state</li>
     </ol>
     <p>
       <em>
@@ -260,7 +260,7 @@
     </p>
     <h2>Listening in the browser</h2>
     <p>
-      All that the code required in the browser are these few lines.
+      All the code which is required in the browser are these few lines.
     </p>
     <pre><code class="language-js">
       // lib/watercooler/assets/main.js
@@ -289,7 +289,7 @@
     <h2>Starting multiple nodes</h2>
     <p>
       When starting multiple nodes each one needs a name and a way to find other nodes.
-      To tell each node what others to look for create a <code class="language-bash">sys.config</code> with the following content.
+      To tell each node what others to look for, create a <code class="language-bash">sys.config</code> with the following content.
     </p>
     <pre><code class="language-erlang">
       %% sys.config
@@ -306,7 +306,7 @@
     </code></pre>
     <p>
       <em>
-        This is an erlang file because it's contents are passed to the erlang VM at startup.
+        This is an erlang file because the contents are passed to the erlang VM at startup.
       </em>
     </p>
     <p>
@@ -326,11 +326,11 @@
         -S mix
     </code></pre>
     <p>
-      Opening browser windows to <a href="localhost:8081">localhost:8081</a> and <a href="localhost:8082">localhost:8082</a> and publish a message will appear in both windows.
+      Opening browser windows to <a href="localhost:8081">localhost:8081</a> and <a href="localhost:8082">localhost:8082</a> and publish A message will appear in both windows.
     </p>
     <h2>Next</h2>
     <p>
-      Interested in using Raxx the best place to get started is the <a href="https://github.com/crowdhailer/raxx">README</a>.
+      Interested in using Raxx? The best place to get started is the <a href="https://github.com/crowdhailer/raxx">README</a>.
       Any questions, ask on the <a href="https://elixirforum.com/">Elixir Forum</a> or chat in the <a href="https://elixir-lang.slack.com/messages/C56H3TBH8/">#raxx slack channel</a>.
     </p>
   </main>
