elixirify the cv

--- a/curriculum-vitae/index.html
+++ b/curriculum-vitae/index.html
@@ -24,8 +24,8 @@
     </header>
     <main class="cv">
       <p>
-        I am an experienced Ruby developer and have taken the lead in several development efforts.
-        I have also delivered products in JavaScript and Elixir.
+        I am an experienced Elixir developer and have taken the lead in several development efforts.
+        I have also delivered products in JavaScript, Ruby and Scala.
       </p>
       <p>
         I am an advocate of Domain Driven Design, referencing its methods to reliably deliver value.
@@ -36,15 +36,23 @@
       </p>
       <h1>Skills</h1>
       <hr>
-      <h2>Ruby</h2>
+      <h2>Elixir</h2>
       <p>
-        <b>Testing:</b> Experience with MiniTest and RSpec, as well as Cucumber to build a cross language test suite.
-        Nurturing robust test suites has allowed me to have non-technical clients actively contributing to development.
+        <b>Language:</b> Currently my passion, I have made contributions to the core language.
+        The functional paradigm and are immutable data are a natural way for me to express problems.
+        The concurrency model suggests a world of possibilities that I have not seen in other languages.
       </p>
       <p>
-        <b>Frameworks:</b> Worked on projects with and without Rails.
-        Alternative frameworks I have used to deploy applications include Padrino and Sinatra.
-        I keep up to date on the growing cohort of viable alternatives, such as Hanami and Roda.
+        <b>Web:</b> Have developed production web applications with Phoenix and without.
+        This has given me a very valuable insight into the still young ecosystem surrounding Elixir.
+        I have worked to deliver websocket API's, REST API's and dynamic sights
+      </p>
+      <h2>Docker</h2>
+      <p>
+        <b>Development:</b> Gained experience tweeking Dockerfiles and docker-compose to improve the local development experience for our multi service system.
+      </p>
+      <p>
+        <b>Production:</b> Familiar with the ECS service from Amazon to run dockerized systems in production.
       </p>
       <h2>JavaScript</h2>
       <p>
@@ -56,13 +64,15 @@
         <b>Testing:</b> Used Jasmine to test frontend code.
         Employ a pragmatic approach so that the cost of maintenance does not start to outweigh the benefits of testing.
       </p>
-      <h2>Elixir</h2>
+      <h2>Ruby</h2>
       <p>
-        <b>Language:</b> Currently my passion, I find immutable data and the functional paradigm a natural way to express problems.
-        The concurrency model suggests a world of possibilities that I have not seen in other languages.
+        <b>Testing:</b> Experience with MiniTest and RSpec, as well as Cucumber to build a cross language test suite.
+        Nurturing robust test suites has allowed me to have non-technical clients actively contributing to development.
       </p>
       <p>
-        <b>Web:</b> The job I had in Elixir was a translation service between different websocket API's. It was a project which would not have benefited from Phoenix. The Phoenix web framework is something I would like to investigate further.
+        <b>Frameworks:</b> Worked on projects with and without Rails.
+        Alternative frameworks I have used to deploy applications include Padrino and Sinatra.
+        I keep up to date on the growing cohort of viable alternatives, such as Hanami and Roda.
       </p>
       <h1>Open Source and Community</h1>
       <hr>
@@ -71,29 +81,30 @@
       </p>
       <ul>
         <li>
-          <a href="https://github.com/CrowdHailer/OK">OK:</a> adding Try monads to Elixir for error handling.
+          <a href="https://github.com/CrowdHailer/OK">OK:</a> adding result monads to Elixir for elegant error handling.
         </li>
         <li>
-          <a href="https://github.com/CrowdHailer/vulcanize">Vulcanize:</a> Ruby form objects to coerce user input using application domain objects.
-        </li>
-        <li>
-          <a href="https://github.com/CrowdHailer/level">Level:</a> A spirit level webapp, built in Vanilla JS.
+          <a href="https://github.com/CrowdHailer/ace">Ace:</a> HTTP web server and client, supports http1 and http2.
         </li>
         <li>
           <a href="https://github.com/CrowdHailer/raxx">Raxx:</a> an Elixir webserver interface based on Rack.
         </li>
+        <li>
+          <a href="https://github.com/CrowdHailer/level">Level:</a> A spirit level webapp, built in Vanilla JS.
+        </li>
       </ul>
       <p>
-        I enjoy blogging and speaking at meet-ups and conferences to share new techniques and ideas. Check out my <a href="/talks">talks</a> and previous <a href="insights.workshop14.io">blog</a>.
+        I enjoy blogging and speaking at meet-ups and conferences to share new techniques and ideas.
       </p>
       <h1>Timeline</h1>
       <hr>
-      <h2>Ching</h2>
-      <h3>Senior Software Developer</h3>
+      <h2>Curl</h2>
+      <h3>Lead Developer</h3>
       <h4>Jan 2017 - Present</h4>
       <p>
-        As part of a small team I am working on the development of a modern secure network for payments and transfers.
-        I am writing backend Elixir code and we are exploring how an Event Driven Architecture can build a robust distributed system.
+        Part of a small team working to develop a secure network for mobile payments.
+        I have been responsible for designing an implementing the backend systems.
+        We are using an Event Driven Architecture and Elixir to create a robust distributed system.
       </p>
       <h2>Goodlord</h2>
       <h3>Senior Software Developer</h3>
